fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  overflow: hidden;
+  padding: 20px;
 }
 
 @media (min-width: 1000px) {
