--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -7,10 +7,9 @@ body
     display: flex
     justify-content: center
     align-items: center
-    overflow: hidden
+    padding: 20px
+    // overflow: hidden
 
 @media (min-width: 1000px)
     body
         font-size: 13px
-    
-        
